--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.7 2008-06-24 08:53:43 opengl2772 Exp $
-# Copyright (C) 2006-2008 Tadamasa Teranishi
-#               2006-2008 Namazu Project All rights reserved.
+# $Id: env.pl.in,v 1.8 2009-09-05 15:56:25 opengl2772 Exp $
+# Copyright (C) 2006-2009 Tadamasa Teranishi
+#               2006-2009 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -54,8 +54,9 @@ eval 'use IO::String';
 require Cwd;
 require 'pltests.pl';
 
-use constant FLAG_MASK     => 0x01;
-use constant FLAG_CHECKSTR => 0x02;
+use constant FLAG_MASK      => 0x01;
+use constant FLAG_CHECKSTR  => 0x02;
+use constant FLAG_CHECKPATH => 0x06;
 
 
 my $cwd = Cwd::cwd();
@@ -88,6 +89,7 @@ sub maskenv($)
 sub printenv($$)
 {
     my ($env, $flag) = @_;
+    my $flagCheckPath = 0;
     my $flagCheckStr = 0;
     my $flagMask = 0;
     my $value;
@@ -95,11 +97,14 @@ sub printenv($$)
 
 
     if (defined($flag)) {
+        $flagCheckPath = 1 if ($flag & FLAG_CHECKPATH);
         $flagCheckStr = 1 if ($flag & FLAG_CHECKSTR);
         $flagMask = 1 if ($flag & FLAG_MASK);
     }
 
-    if ($flagCheckStr == 1) {
+    if ($flagCheckPath == 1) {
+        $stat = 1 if (env($env) =~ m/[^0-9A-Z\-\/\\:~]/gi);
+    } elsif ($flagCheckStr == 1) {
         $stat = 1 if (env($env) =~ m/[^0-9A-Z\-]/gi);
     }
 
@@ -175,8 +180,8 @@ $stat += printenv('TZ', 0);
 $stat += printenv('SHELL', 0);
 $stat += printenv('ComSpec', 0);
 $stat += printenv('SystemDrive', 0);
-$stat += printenv('TEMP', FLAG_CHECKSTR);
-$stat += printenv('TMP', FLAG_CHECKSTR);
+$stat += printenv('TEMP', FLAG_CHECKSTR | FLAG_CHECKPATH);
+$stat += printenv('TMP', FLAG_CHECKSTR | FLAG_CHECKPATH);
 $stat += printenv('USER', FLAG_MASK | FLAG_CHECKSTR);
 $stat += printenv('USERDOMAIN', FLAG_MASK | FLAG_CHECKSTR);
 $stat += printenv('USERNAME', FLAG_MASK);
