--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -33,7 +33,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.rpm|.*\\.deb" .   	   # RPM, DEB
 		"|.*\\.doc|.*\\.xls|.*\\.pp[st]" . # Word, Excel, PowerPoint
 		"|.*\\.docx|.*\\.xlsx|.*\\.pp[st]x" . # MS-OfficeOpenXML Word, Excel, PowerPoint
-		"|.*\\.vs[dst]|.*\\.v[dst]x" .     # Visio
+		"|.*\\.vs[dst]|.*\\.v[dst]x|.*\\.vdw" .    # Visio
 		"|.*\\.j[sabf]w|.*\\.jtd" .        # Ichitaro 4, 5, 6, 7, 8
 		"|.*\\.sx[widc]" .                 # OpenOffice Writer,Calc,Impress,Draw
 		"|.*\\.od[tspg]" .                 # OpenOffice2.0
