--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.187 2011-06-26 05:05:38 opengl2772 Exp $
+# $Id: mknmz.in,v 1.188 2011-06-26 05:41:30 opengl2772 Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000-2008 Namazu Project All rights reserved.
@@ -1738,7 +1738,7 @@ sub append_index (@) {
 # Set target files to @flist and return with the number of regiested files.
 #
 sub set_target_files() {
-    my %rdocs;    # 'rdocs' means 'registered documents'
+    my %rdocs = ();    # 'rdocs' means 'registered documents'
     my @found_files = @_;
 
     # Load the list of registered documents
