add $Config{osvers}, $Config{archname}.

--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.8 2009-09-05 15:56:25 opengl2772 Exp $
+# $Id: env.pl.in,v 1.9 2011-11-27 18:37:35 opengl2772 Exp $
 # Copyright (C) 2006-2009 Tadamasa Teranishi
 #               2006-2009 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -30,6 +30,7 @@
 
 use strict;
 use English;
+use Config;
 
 eval 'require NKF;';
 eval 'require Text::Kakasi;';
@@ -124,6 +125,8 @@ sub printenv($$)
 
 pltests::putline($LOG, "  *** starting $0");
 pltests::putline($LOG, sprintf("OSNAME               : %s", $English::OSNAME));
+pltests::putline($LOG, sprintf("osvers               : %s", $Config{'osvers'}));
+pltests::putline($LOG, sprintf("archname             : %s", $Config{'archname'}));
 pltests::putline($LOG, sprintf("Perl                 : %f", $English::PERL_VERSION));
 
 my $ver;
