output File::MMagic::VERSION

--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.9 2011-11-27 18:37:35 opengl2772 Exp $
-# Copyright (C) 2006-2009 Tadamasa Teranishi
-#               2006-2009 Namazu Project All rights reserved.
+# $Id: env.pl.in,v 1.10 2013-06-27 14:04:17 opengl2772 Exp $
+# Copyright (C) 2006-2013 Tadamasa Teranishi
+#               2006-2013 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -32,25 +32,26 @@ use strict;
 use English;
 use Config;
 
+eval 'require File::MMagic;';
 eval 'require NKF;';
 eval 'require Text::Kakasi;';
 eval 'require Text::ChaSen;';
 eval 'require MeCab;';
 
 # for filter
-eval 'use File::Basename';
-eval 'use Archive::Zip';
-eval 'use Archive::Tar';
-eval 'use MIME::Base64';
-eval 'use MIME::QuotedPrint';
-eval 'use MP3::Info';
-eval 'use OLE::Storage_Lite';
-eval 'use OLE::Storage_Lite::PPS';
-eval 'use OLE::Storage_Lite::PPS::Root';
-eval 'use OLE::Storage_Lite::PPS::File';
-eval 'use OLE::Storage_Lite::PPS::Dir';
-eval 'use IO::Scalar';
-eval 'use IO::String';
+eval 'use File::Basename;';
+eval 'use Archive::Zip;';
+eval 'use Archive::Tar;';
+eval 'use MIME::Base64;';
+eval 'use MIME::QuotedPrint;';
+eval 'use MP3::Info;';
+eval 'use OLE::Storage_Lite;';
+eval 'use OLE::Storage_Lite::PPS;';
+eval 'use OLE::Storage_Lite::PPS::Root;';
+eval 'use OLE::Storage_Lite::PPS::File;';
+eval 'use OLE::Storage_Lite::PPS::Dir;';
+eval 'use IO::Scalar;';
+eval 'use IO::String;';
 
 require Cwd;
 require 'pltests.pl';
@@ -130,6 +131,8 @@ pltests::putline($LOG, sprintf("archname             : %s", $Config{'archname'})
 pltests::putline($LOG, sprintf("Perl                 : %f", $English::PERL_VERSION));
 
 my $ver;
+eval '$ver = $File::MMagic::VERSION;' or $ver = 'not installed';
+pltests::putline($LOG, sprintf("File::MMagic         : $ver"));
 eval '$ver = $NKF::VERSION;' or $ver = 'not installed';
 pltests::putline($LOG, sprintf("NKF module           : $ver"));
 eval '$ver = $Text::Kakasi::VERSION;' or $ver = 'not installed';
