* filter/epub.pl: EPUB new filter. * pl/conf.pl.in: add EPUB filter. * tests/data/ja/epub2.epub: EPUB test data.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -45,6 +45,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.kpr|.*\\.flw" .             # KPresenter, Kivio
 		"|.*\\.zip" .                      # ZIP
 		"|.*\\.xps|.*\\.mdi" .             # XML Paper Specification, Microsoft Document Imaging
+		"|.*\\.epub" .                     # EPUB
 		"|.*\\.eml|\\d+|[-\\w]+\\.[1-9n]"; # Mail/News, man
 
 #
