--- a/pltests/pltests.pl.in
+++ b/pltests/pltests.pl.in
@@ -1,8 +1,8 @@
 #
 # -*- Perl -*-
-# $Id: pltests.pl.in,v 1.12 2006-08-12 06:07:30 opengl2772 Exp $
-# Copyright (C) 2004-2006 Tadamasa Teranishi
-#               2004-2006 Namazu Project All rights reserved.
+# $Id: pltests.pl.in,v 1.13 2013-11-30 22:08:23 opengl2772 Exp $
+# Copyright (C) 2004-2013 Tadamasa Teranishi
+#               2004-2013 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -134,8 +134,12 @@ sub putline($$;$) {
                         cdie 'win95cmd.exe not found.';
                     }
                     $ENV{'COMSPEC'} = $comspec;
+                	@args = ("start", "/WAIT", @args);
                 }
-                @args = ($comspec, "/d", "/x", "/c", @args);
+				else {
+                	@args = ("start", "/WAIT", "/B", @args);
+				}
+#                @args = ($comspec, "/d", "/x", "/c", @args);
             }
         }
         print $fh "$msg";
