--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,10 +1,10 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.191 2011-07-08 13:23:14 usu Exp $
+# $Id: mknmz.in,v 1.192 2013-12-15 03:59:02 opengl2772 Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
-# Copyright (C) 2000-2008 Namazu Project All rights reserved.
+# Copyright (C) 2000-2013 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -79,13 +79,6 @@ STDERR->autoflush(1);
 main();
 sub main {
     my $start_time = time;
-
-    if ($English::PERL_VERSION == 5.008001) {
-        unless (defined $ENV{PERL_HASH_SEED} && $ENV{PERL_HASH_SEED} eq 0) {
-            print "Run mknmz with the environment variable PERL_HASH_SEED=0\n";
-            exit 1;
-        }
-    }
 
     init();
 
