--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,9 +1,14 @@
 # Process this file with automake to produce Makefile.in
 
-man_MANS = namazu.1 mknmz.1
-man_aux = $(man_MANS:.1=.x)
+man_MANS = namazu.1 mknmz.1 \
+	adnmz.1 bnamazu.1 gcnmz.1 kwnmz.1 lnnmz.1 mailutime.1 \
+	nmz-config.1 nmzcat.1 nmzgrep.1 nmzmerge.1 rfnmz.1 \
+	tknamazu.1 vfnmz.1
+
+man_aux = namazu.x mknmz.x
 
 EXTRA_DIST = help2man $(man_MANS) $(man_aux)
+
 MAINTAINERCLEANFILES = $(man_MANS)
 HELP2MAN = $(PERL) -w -- $(srcdir)/help2man
 
