--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,6 +1,6 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.47 2006-07-16 21:12:05 opengl2772 Exp $
+# $Id: Makefile.am,v 1.48 2017-01-09 13:49:43 opengl2772 Exp $
 #
 
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
@@ -17,6 +17,7 @@ DLL_OBJ_FILES = alias.o codeconv.o field.o hlist.o i18n.o \
 		idxname.o l10n-ja.o libnamazu.o nmzversion.o \
 		parser.o query.o re.o regex.o replace.o \
 		score.o search.o seed.o \
+		list.o \
 		util.o var.o wakati.o
 
 localedir   = $(prefix)/$(DATADIRNAME)/locale
@@ -33,7 +34,7 @@ INCLUDES = -I$(srcdir) -I.. -I$(srcdir)/../lib -I$(srcdir)/../src \
 
 pkginclude_HEADERS = codeconv.h field.h hlist.h i18n.h idxname.h \
 	libnamazu.h l10n-ja.h parser.h query.h re.h regex.h \
-	search.h score.h util.h var.h wakati.h
+	search.h score.h util.h var.h wakati.h list.h
 lib_LTLIBRARIES = libnmz.la
 
 libnmz_la_SOURCES = alias.c alias.h codeconv.c codeconv.h \
@@ -41,7 +42,9 @@ libnmz_la_SOURCES = alias.c alias.h codeconv.c codeconv.h \
 	idxname.c idxname.h libnamazu.c libnamazu.h l10n-ja.c l10n-ja.h \
 	parser.c parser.h query.c query.h re.c re.h replace.c replace.h \
 	regex.c regex.h search.c search.h seed.c seed.h util.c util.h \
-	var.c var.h wakati.c wakati.h score.c score.h nmzversion.c
+	var.c var.h wakati.c wakati.h score.c score.h \
+	list.c list.h \
+	nmzversion.c
 
 libnmz_la_DEPENDENCIES = @NMZ_LIBOBJS@
 libnmz_la_LIBADD = @LTLIBINTL@ @LTLIBICONV@
