--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.10 2013-06-27 14:04:17 opengl2772 Exp $
-# Copyright (C) 2006-2013 Tadamasa Teranishi
-#               2006-2013 Namazu Project All rights reserved.
+# $Id: env.pl.in,v 1.11 2017-01-09 13:49:44 opengl2772 Exp $
+# Copyright (C) 2006-2015 Tadamasa Teranishi
+#               2006-2015 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -105,7 +105,7 @@ sub printenv($$)
     }
 
     if ($flagCheckPath == 1) {
-        $stat = 1 if (env($env) =~ m/[^0-9A-Z\-\/\\:~]/gi);
+        $stat = 1 if (env($env) =~ m/[^0-9A-Z\-\/\\:~\.]/gi);
     } elsif ($flagCheckStr == 1) {
         $stat = 1 if (env($env) =~ m/[^0-9A-Z\-]/gi);
     }
