--- a/pltests/alltests.pl.in
+++ b/pltests/alltests.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: alltests.pl.in,v 1.7 2006-10-20 00:26:33 opengl2772 Exp $
-# Copyright (C) 2004-2006 Tadamasa Teranishi
-#               2004-2006 Namazu Project All rights reserved.
+# $Id: alltests.pl.in,v 1.8 2018-04-02 15:58:32 opengl2772 Exp $
+# Copyright (C) 2004-2018 Tadamasa Teranishi
+#               2004-2018 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -25,6 +25,7 @@
 #
 
 use strict;
+push(@INC, '.');
 require 'pltests.pl';
 
 my @TESTS = (
