--- a/pltests/env.pl.in
+++ b/pltests/env.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 
-# $Id: env.pl.in,v 1.11 2017-01-09 13:49:44 opengl2772 Exp $
-# Copyright (C) 2006-2015 Tadamasa Teranishi
-#               2006-2015 Namazu Project All rights reserved.
+# $Id: env.pl.in,v 1.12 2018-04-02 15:58:32 opengl2772 Exp $
+# Copyright (C) 2006-2018 Tadamasa Teranishi
+#               2006-2018 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -54,6 +54,7 @@ eval 'use IO::Scalar;';
 eval 'use IO::String;';
 
 require Cwd;
+push(@INC, '.');
 require 'pltests.pl';
 
 use constant FLAG_MASK      => 0x01;
