--- a/pltests/mknmz-14.pl.in
+++ b/pltests/mknmz-14.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mknmz-14.pl.in,v 1.5 2006-08-12 06:07:29 opengl2772 Exp $
-# Copyright (C) 2004-2006 Tadamasa Teranishi
-#               2004-2006 Namazu Project All rights reserved.
+# $Id: mknmz-14.pl.in,v 1.6 2018-04-02 15:58:32 opengl2772 Exp $
+# Copyright (C) 2004-2018 Tadamasa Teranishi
+#               2004-2018 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -30,6 +30,7 @@
 
 use strict;
 require Cwd;
+push(@INC, '.');
 require 'pltests.pl';
 
 my $cwd = Cwd::cwd();
