--- a/pltests/mknmz-8.pl.in
+++ b/pltests/mknmz-8.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mknmz-8.pl.in,v 1.5 2008-03-03 10:11:54 opengl2772 Exp $
+# $Id: mknmz-8.pl.in,v 1.6 2018-04-02 15:58:33 opengl2772 Exp $
 # Copyright (C) 2004-2006 Yukio USUDA
-#               2004-2008 Namazu Project All rights reserved.
+#               2004-2018 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -30,6 +30,7 @@
 use strict;
 require Cwd;
 use File::Copy;
+push(@INC, '.');
 require 'pltests.pl';
 
 my $cwd = Cwd::cwd();
