--- a/pltests/namazu-cgi-4.pl.in
+++ b/pltests/namazu-cgi-4.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: namazu-cgi-4.pl.in,v 1.6 2008-02-02 07:01:45 opengl2772 Exp $
+# $Id: namazu-cgi-4.pl.in,v 1.7 2018-04-02 15:58:33 opengl2772 Exp $
 # Copyright (C) 2004-2006 Yukio USUDA
-#               2004-2008 Namazu Project All rights reserved.
+#               2004-2018 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -29,6 +29,7 @@
 
 use strict;
 require Cwd;
+push(@INC, '.');
 require 'pltests.pl';
 
 my $cwd = Cwd::cwd();
